@@ -133,7 +133,7 @@ example15:
     ph.x and dynmat.x
 
 example16:
-    Graphite with DFT-D2 (experimental!)
+    Graphite with DFT-D2
 
 Additional feature-specific examples:
 
